--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Real time Chat</title>
   </head>
-  <body style="background-color: #66d9ff;">
+  <body style="background: #c94e15">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
